<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudCapture</string>
    <string name="title_section1">About</string>
    <string name="title_section2">Capture PDF</string>
    <string name="title_section3">Upload PDF</string>
    <string name="title_section4">Download PDF</string>
    <string name="title_sectionalt">Capture/Upload PDF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logoff">Logoff</string>
    <string name="title_activity_fileexplorer">FileexplorerActivity</string>
    <string name="navdrawer1">Capture PDF</string>
    <string name="navdrawer2">Upload PDF</string>
    <string name="navdrawer3">Download PDF</string>
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>

    <string name="dialog_title_ciprofile_preference">Enter the name of the profile</string>
    <string name="dialog_title_hostname_preference">Enter the Hostname</string>
    <string name="dialog_title_domain_preference">Enter the Domain</string>
    <string name="dialog_title_port_preference">Enter the Port</string>
    <string name="dialog_title_username_preference">Enter the Username</string>
    <string name="dialog_title_password_preference">Enter the Password</string>

    <string name="dialog_title_topictemplate_preference">Enter the Topic Template Name</string>

    <string name="dialog_title_actiontimeout_preference">Enter the Action Timeout (Seconds)</string>
    <string name="dialog_title_lilotimeout_preference">Enter the Login/Logoff Timeout (Seconds)</string>
    <string name="dialog_title_uploadtimeout_preference">Enter the Upload Timeout (Seconds)</string>


    <string name="CI_config_preferences">Content Integrator preferences</string>
    <string name="client_config_preferences">Client preferences</string>

    <string name="oresources_attributes">Other Resources</string>
    <string name="timeoutresources_attributes">Action Behaviors</string>
    <string name="title_list_cprofiles">Connection Profiles</string>
    <string name="summary_list_preference">List of Content Integrators to connect to</string>
    <string name="dialog_title_list_preference">Choose one</string>

    <string name="CI_config_screen_preference">New CI Connection</string>
    <string name="CI_config_summary_screen_preference">Add new Ci connection profile</string>

    <string name="CI_CAM_config_screen_preference">CI CAM Settings</string>
    <string name="CI_CAM_config_summary_screen_preference">Edit CAM Settings</string>

    <string name="CI_PDF_config_screen_preference">PDF Retrieval</string>
    <string name="CI_PDF_config_summary_screen_preference">Always download files as PDFs</string>

    <string name="CI_topictemplate_screen_preference">Edit Topic Template Name </string>
    <string name="CI_topictemplate_summary_screen_preference">Modify Topic Template Name </string>

    <string name="CI_timeout_screen_preference">Timeouts</string>
    <string name="CI_timeout_summary_screen_preference">Modify timeouts for actions</string>

    <string name="title_next_screen_ciprofile_preference">Edit Profile Name</string>
    <string name="summary_next_screen_ciprofile_preference">Name of the connection profile</string>
    <string name="title_next_screen_hostname_preference">Edit Hostname</string>
    <string name="summary_next_screen_hostname_preference">Hostname of the CI Server</string>
    <string name="title_next_screen_domain_preference">Edit Domain</string>
    <string name="summary_next_screen_domain_preference">Domain of the CI Server</string>
    <string name="title_next_screen_port_preference">Edit Port Number</string>
    <string name="summary_next_screen_port_preference">Port Number of the CI Server</string>
    <string name="title_next_screen_username_preference">Edit Username</string>
    <string name="summary_next_screen_username_preference">CI Server Username</string>
    <string name="title_next_screen_password_preference">Edit Password</string>
    <string name="summary_next_screen_password_preference">CI Server Password</string>
    <string name="title_next_screen_button_preference">Save CI server info</string>
    <string name="summary_next_screen_button_preference">Tap to save a connection profile to a CI server</string>
    <string name="title_next_screen_actiontimeout_preference">Edit Action Timeout</string>
    <string name="summary_next_screen_actiontimeout_preference">API transaction timeout (Seconds)</string>
    <string name="title_next_screen_lilotimeout_preference">Edit Logon/Logoff Timeout</string>
    <string name="summary_next_screen_lilotimeout_preference">Logon/Logoff timeout (Seconds)</string>
    <string name="title_next_screen_uploadtimeout_preference">Edit Upload Timeout</string>
    <string name="summary_next_screen_uploadtimeout_preference">Upload timeout(Seconds)</string>
    <string name="title_intent_preference">Systemware Website</string>
    <string name="summary_intent_preference">Visits www.systemware.com</string>

    <string name="title_default_report_screen_preference">Default Report</string>
    <string name="summary_default_report_screen_preference">Change the default report name</string>

    <string name="title_default_report_preference">Default report name</string>
    <string name="dialog_title_default_report_preference">Edit the default report name</string>

    <string name="ci_profile">profilename_preference</string>
    <string name="ci_hostname">hostname_preference</string>
    <string name="ci_domain">domain_preference</string>
    <string name="ci_port">port_preference</string>
    <string name="ci_username">username_preference</string>
    <string name="ci_password">password_preference</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getfilenamesdcard">Get File Name From SDCard</string>
    <string name="filename">File Name</string>
    <string name="browserbutton">Browser</string>
    <string name="uploadbutton">Upload File</string>
    <string name="topicdesc">Description</string>
    <string name="topicdescval">Description</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--Possible messages to appear in the ToastMessageTask-->
    <string name="noConnectionMessage">Connection to CI Server failed/timed out. Check CI Connection Profile under Settings.</string>
    <string name="reportNotValidMessage">Report Name not found.</string>
    <string name="fillFieldMessage">Error. Fill out all the fields.</string>
    <string name="fileUploadSuccessMessage">File was successfully Uploaded</string>
    <string name="fileUploadFailedMessage">File upload failed.</string>
    <string name="fileNotWrittenMessage">Error writing file to local storage</string>
    <string name="picNotTakenMessage">Error. No image has been taken yet.</string>
    <string name="noProfileSelectedMessage">Error. Select a connection profile.</string>
    <string name="notValidTopicTemplateMessage">Error. Topic template id is invalid. Check settings.</string>
    <string name="downloadFileSuccessfulMessage">File has been downloaded successfully.</string>
    <string name="invalidFileFormatMessage">Error. Invalid file format. Cannot load file.</string>
    <string name="fileIsCachedMessage">Found cached file. Loading file.</string>
    <string name="FileOverWrittenMessage">File was overwritten</string>
    <string name="FileNotOverWrittenMessage">File was not overwritten</string>
    <string name="CIConnProfileSavedMessage">CI Connection Profile Saved.</string>
    <string name="DupCIConnProfileSavedMessage">Duplicate CI Connection Profile Found.</string>
    <string name="logoffSuccessMessage">Successfully logged off.</string>
    <string name="logoffFailedMessage">Logoff Failed.</string>
    <!--Possible messages to appear in the ToastMessageTask-->

</resources>
