<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/CI_config_preferences">

        <com.ameraz.android.cipdfcapture.app.CiServerPref
            android:title="@string/title_list_cprofiles"
            android:key="list_preference_ci_servers" />

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
        <PreferenceScreen
            android:key="ci_server_preference"
            android:title="@string/CI_config_screen_preference"
            android:summary="@string/CI_config_summary_screen_preference">

            <!-- You can place more preferences here that will be shown on the next screen. -->
            <EditTextPreference
                android:key="profilename_preference"
                android:title="@string/title_next_screen_ciprofile_preference"
                android:summary="@string/summary_next_screen_ciprofile_preference"
                android:dialogTitle="@string/dialog_title_ciprofile_preference" />

            <EditTextPreference
                android:key="hostname_preference"
                android:title="@string/title_next_screen_hostname_preference"
                android:summary="@string/summary_next_screen_hostname_preference"
                android:dialogTitle="@string/dialog_title_hostname_preference" />

            <EditTextPreference
                android:key="domain_preference"
                android:title="@string/title_next_screen_domain_preference"
                android:summary="@string/summary_next_screen_domain_preference"
                android:dialogTitle="@string/dialog_title_domain_preference" />

            <EditTextPreference
                android:key="port_preference"
                android:title="@string/title_next_screen_port_preference"
                android:summary="@string/summary_next_screen_port_preference"
                android:numeric="integer"
                android:dialogTitle="@string/dialog_title_port_preference" />

            <EditTextPreference
                android:key="username_preference"
                android:title="@string/title_next_screen_username_preference"
                android:summary="@string/summary_next_screen_username_preference"
                android:dialogTitle="@string/dialog_title_username_preference" />

            <EditTextPreference
                android:key="password_preference"
                android:title="@string/title_next_screen_password_preference"
                android:summary="@string/summary_next_screen_password_preference"
                android:dialogTitle="@string/dialog_title_password_preference" />

            <Preference
                android:title="@string/title_next_screen_button_preference"
                android:key="save"
                android:summary="@string/summary_next_screen_button_preference" />

        </PreferenceScreen>

        <PreferenceScreen
            android:key="ci_cam_preference"
            android:title="@string/CI_CAM_config_screen_preference"
            android:summary="@string/CI_CAM_config_summary_screen_preference">

            <!-- You can place more preferences here that will be shown on the next screen. -->
            <EditTextPreference
                android:key="camName_preference"
                android:title="@string/CI_topictemplate_screen_preference"
                android:summary="@string/CI_topictemplate_summary_screen_preference"
                android:dialogTitle="@string/dialog_title_topictemplate_preference" />

        </PreferenceScreen>

    </PreferenceCategory>

    <!-- You can place more preferences here that will be shown on the next screen. -->
    <PreferenceCategory android:title="@string/client_config_preferences">

        <PreferenceScreen
            android:key="timeout_preference"
            android:title="@string/CI_timeout_screen_preference"
            android:summary="@string/CI_timeout_summary_screen_preference">

            <EditTextPreference
                android:key="actiontimeout_preference"
                android:title="@string/title_next_screen_actiontimeout_preference"
                android:summary="@string/summary_next_screen_actiontimeout_preference"
                android:numeric="integer"
                android:dialogTitle="@string/dialog_title_actiontimeout_preference" />

            <EditTextPreference
                android:key="lilotimeout_preference"
                android:title="@string/title_next_screen_lilotimeout_preference"
                android:summary="@string/summary_next_screen_lilotimeout_preference"
                android:numeric="integer"
                android:dialogTitle="@string/dialog_title_lilotimeout_preference" />

            <EditTextPreference
                android:key="uploadtimeout_preference"
                android:title="@string/title_next_screen_uploadtimeout_preference"
                android:summary="@string/summary_next_screen_uploadtimeout_preference"
                android:numeric="integer"
                android:dialogTitle="@string/dialog_title_uploadtimeout_preference" />

        </PreferenceScreen>
        <PreferenceScreen
            android:key="gallery_preference"
            android:title="Gallery Settings">

            <EditTextPreference
                android:key="column_preference"
                android:title="Number of columns in the gallery"
                android:numeric="integer"
                android:dialogTitle="Number of columns" />


        </PreferenceScreen>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/oresources_attributes">

        <PreferenceScreen
            android:title="@string/title_intent_preference"
            android:summary="@string/summary_intent_preference">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://systemware.com/" />

        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
