<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <TextView android:id="@+id/textview" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/getfilenamesdcard"
        android:textSize="18dp"
        android:gravity="center" 
        android:layout_marginTop="10dp"      
    />    
    <RelativeLayout android:id="@+id/relativeLayout1" 
        android:layout_height="match_parent"
        android:layout_width="wrap_content">
        <EditText
            android:layout_alignParentLeft="true" 
            android:hint="@string/filename"
            android:id="@+id/reportName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
            android:layout_marginTop="15dp" 
	        android:ems="10"
	        android:inputType="textPersonName" 
            android:layout_toLeftOf="@+id/browseButton" >
    	</EditText>
    
        <Button android:text="@string/browserbutton"
	         android:id="@+id/browseButton"
	         android:textSize="18dp"
	         android:layout_marginTop="10dp" 
	         android:layout_alignParentRight="true" 
	         android:layout_height="wrap_content" 
	         android:layout_width="wrap_content">
         </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploadbutton"
            android:id="@+id/upload"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="54dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/browseButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="43dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topicdesc"
                    android:id="@+id/textView2"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="50dp" />

                <EditText
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:layout_marginLeft="50dp"
                    android:hint="@string/topicdescval" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

</LinearLayout>
